  * Windows file/directory fixes in "o/unixfsys.c"
  * MinGW32 -march in configure - removes deprecation warnings
  * MinGW32 directory fix - "o/mingfile.c".
  * Allow for sysconf to determine clock granularity at compile time to
    fix time errors on the Itanium
  * Disable SGC on macosx until the sgc/save problem can be fixed.
  * Fix fixnum print bug on 64bit
  * Fix nil types in room report

 -- Camm Maguire <camm@enhanced.com>  Sat, 15 Jan 2005 21:24:20 +0000

gcl (2.6.5-1) unstable; urgency=high

  * New gmp_wrappers.{c,h} files that prevent all GBC within gmp,
    obviating the need for gmp patches and a local gmp configure.  FIXME
    -- extend to all gmp functions in a systematic way, and write header
    information for future use in the compiler, making sure that plt.c
    carries the needed gmp symbols at this point
  * Build support for gmp_wrappers
  * Support for gmp_wrappers in alloc_relblock/alloc_contblock;Support
    for GCL_GPROF_START define in gprof functions
  * dynsysgmp on by default; configure backs off to local gmp configure
    and build automatically if needed either because gmp not present or
    patched symbols are needed; autodetect and set the _start symbol
    when using gprof
  * Fix (setf (get ...) ...) return bug when interpreted
  * Fix overwrite end of sgc_type_map bug
  * Versioned depends on binutils-dev manually installed by Debian build
    process
  * New upstream release
  * Proper binutils dependency for Debian
  * head -1l -> head -n 1 for freebsd
  * Cleanup gmp_wrapper code, check for in-place calls as write in one
    step is not guaranteed in gmp according to its developers
  * Rebuild against binutils 2.15, Closes: #266253, Closes: #263983

 -- Camm Maguire <camm@enhanced.com>  Tue, 17 Aug 2004 18:22:27 +0000

gcl (2.6.4-1) unstable; urgency=high

  * New upstream release
  * Make disassemble work when original system directory is gone
  * New debian/support files for debconf image default selection support